export const snapshot = {};

snapshot[`typegraphs creation 1`] = `
"[
" +
  "  {
" +
  '    "\$id": "https://metatype.dev/specs/0.0.2.json",
' +
  '    "types": [
' +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "test-complex-types",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "test": 1
' +
  "        },
" +
  '        "required": [
' +
  '          "test"
' +
  "        ]
" +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_20",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          0
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 2,
' +
  '        "output": 20,
' +
  '        "materializer": 0,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_18",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "a_string": 3,
' +
  '          "a_float": 4,
' +
  '          "an_enum": 5,
' +
  '          "an_integer_enum": 6,
' +
  '          "a_float_enum": 7,
' +
  '          "a_struct": 8,
' +
  '          "nested": 10,
' +
  '          "nested_with_ref": 15,
' +
  '          "an_email": 19
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "string",
' +
  '        "title": "string_5",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "number",
' +
  '        "title": "number_6",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "minimum": 1.0,
' +
  '        "multipleOf": 2.0
' +
  "      },
" +
  "      {
" +
  '        "type": "string",
' +
  '        "title": "string_7",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "enum": [
' +
  '          "\\\\"one\\\\"",
' +
  '          "\\\\"two\\\\""
' +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_8",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "enum": [
' +
  '          "1",
' +
  '          "2"
' +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "number",
' +
  '        "title": "number_9",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "enum": [
' +
  '          "1.5",
' +
  '          "2.5"
' +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_11",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "value": 9
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "number",
' +
  '        "title": "number_10",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "optional",
' +
  '        "title": "optional_16",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "item": 11,
' +
  '        "default_value": null
' +
  "      },
" +
  "      {
" +
  '        "type": "array",
' +
  '        "title": "array_15",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "items": 12
' +
  "      },
" +
  "      {
" +
  '        "type": "either",
' +
  '        "title": "either_14",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "oneOf": [
' +
  "          13,
" +
  "          14
" +
  "        ]
" +
  "      },
" +
  "      {
" +
  '        "type": "string",
' +
  '        "title": "string_12",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_13",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_4",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "one": 16,
' +
  '          "two": 18
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "array",
' +
  '        "title": "array_1",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "items": 17,
' +
  '        "minItems": 3
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_0",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "optional",
' +
  '        "title": "optional_3",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "item": 15,
' +
  '        "default_value": null
' +
  "      },
" +
  "      {
" +
  '        "type": "string",
' +
  '        "title": "string_17",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "format": "email"
' +
  "      },
" +
  "      {
" +
  '        "type": "boolean",
' +
  '        "title": "boolean_19",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      }
" +
  "    ],
" +
  '    "materializers": [
' +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=()=>true;"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "predefined_function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "name": "true"
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "runtimes": [
' +
  "      {
" +
  '        "name": "deno",
' +
  '        "data": {
' +
  '          "worker": "default",
' +
  '          "permissions": {}
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "policies": [
' +
  "      {
" +
  '        "name": "__public",
' +
  '        "materializer": 1
' +
  "      }
" +
  "    ],
" +
  '    "meta": {
' +
  '      "prefix": null,
' +
  '      "secrets": [],
' +
  '      "queries": {
' +
  '        "dynamic": true,
' +
  '        "endpoints": []
' +
  "      },
" +
  '      "cors": {
' +
  '        "allow_origin": [],
' +
  '        "allow_headers": [],
' +
  '        "expose_headers": [],
' +
  '        "allow_methods": [],
' +
  '        "allow_credentials": false,
' +
  '        "max_age_sec": null
' +
  "      },
" +
  '      "auths": [],
' +
  '      "rate": null,
' +
  '      "version": "0.0.2"
' +
  "    }
" +
  "  }
" +
  "]"
`;

snapshot[`typegraphs creation 2`] = `
"[
" +
  "  {
" +
  '    "\$id": "https://metatype.dev/specs/0.0.2.json",
' +
  '    "types": [
' +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "test-types",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "one": 1,
' +
  '          "two": 6,
' +
  '          "three": 11
' +
  "        },
" +
  '        "required": [
' +
  '          "one",
' +
  '          "two",
' +
  '          "three"
' +
  "        ]
" +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_9",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          0
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 2,
' +
  '        "output": 5,
' +
  '        "materializer": 0,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_2",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "a": 3,
' +
  '          "b": 4
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_0",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_1",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "minimum": 12
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_3",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "minimum": 12,
' +
  '        "maximum": 43
' +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_11",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          1
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 7,
' +
  '        "output": 9,
' +
  '        "materializer": 2,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_6",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "id": 8,
' +
  '          "post": 9
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_4",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_8",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "id": 10,
' +
  '          "author": 7
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_7",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_13",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          2
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 2,
' +
  '        "output": 2,
' +
  '        "materializer": 4,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      }
" +
  "    ],
" +
  '    "materializers": [
' +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=()=>12;"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=(_,{context})=>context.provider===\\\\"internal\\\\";"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=user=>({id:12,user});"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=()=>false;"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "import_function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "mod": 5,
' +
  '          "name": "three",
' +
  '          "secrets": []
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "module",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "code": "file:scripts/three.ts;base64:H4sIAAAAAAAA/+1XbYvjNhDOZ/8K4ftig9cbJ9ktpM1RuCvl4JaGu20pLItRYjkxtSUjy92kIf+k/6Z/rDOSHb/s7oV72eXuyEBiS6N5NJqRRo+XIstTtvHz7eDJZAhyOZnoJ0j/ORoPJ4NgOLkMhiNsQH8QjAJ4Dp5BykJRScjgc6W/uG9EXpBXIt/KZLVW5IopqrY5I7/9969H0mTJeMEiUvKISaLWjFyJf5I0pWReLkBL3poR5A8mi0RwMvKHvvWCvJ+//vOs0p29iRhXSZwwOSVX87dnMMayYikygjOtJM3XIWcbRZIsF1IR5TWKh8b5+tU/dNZ2vz5qkAvwdVuPm+vWgwNlCZ5mrPDBZVGPfw3v74zCsgqRsWsM0Iwov1CyXCrHIiA7/Y9iC87sKaiplHTrKD/hiq2YdFyPZAmfjT3CacZm9vWdsF2vsVPQRjuRK4glTcE0l2Kzdez31ay2W43fm4fBOWg9y7WspTnOx5ykISgSvtIzmlen7QwN41RQpdX6zUHfA38IiyhTlcAcoYhnkMyOFQ8ZLzNthS/OjY6GZxZ32xtaBaYxqSOFHUxSDMPsJvDI6PYB1xoz41/XyL8AM/+iZ2iCUa8Z47Kz/6ZpaRIGAAvM075txFmhWNRJKEvgKEjnphW4lvPures2ObwPFd6BeShZDJj1duqFMKNJamKIb85DSX/VpNnk3fr5sJkd14pYTBRMF1bbIURl4aym5pi4Uw2lt/msvcPBFBV5uYB+c1L8XJ910GjVymebXBTMObiM88wQyo9Lvmz6UVq70esolL8QImWUtyNkLCJYnuOS2UsCKcLV1SrX16Ezx9kBtypT1xqc5JOlWMokV8W5WkvGfFUMnkCO3P9w84/79/9oPAlO9/8zyPn5xxCAX1JaqNbNr298gHj0yq8MzLWPNVLGdMnINe62Nzwvlb6VFlNiqu+P0KBNY29ZWG7gGsbagjWV6H2KVWZHqEcWZD9tgWFB2EHPDuoIzLVRU/KOLYWMfjKl2oOl/MXFHX+J5dSd6slpe/KWJ3utlUyVkh9mQ58G35MUCZboJ6X/x85/cHn5wz3+P5xcnM7/M8jXzP+9ioN4H2D3x0k71UT4wM+AxQdtaryzKZAtON32osNCNeEdARu0rEUHwSiACNPNbDIGdVlAeDqISdSBAoJoA2kyzBOon2PPseXu62+B3wHBBiQcdBSJlmotZINljA9YBvpRRvjRTBATfZ8MolKXc2C5jbrueZwtwvdAiywWwO4XXof0BSO7S/RqzBZRhK+JFgiG3yMYugMSdmk0Z0eSaEowXTpLe7eH3iGfGrNS2NDY4qeLcSumaQEfYA0ZbXmD14/xx2y/UK8LfyYjegBAZSIqU2j3KdeHXDIB7097orwnOclJvoD8D59NReQAFgAA"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "predefined_function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "name": "true"
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "runtimes": [
' +
  "      {
" +
  '        "name": "deno",
' +
  '        "data": {
' +
  '          "worker": "default",
' +
  '          "permissions": {}
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "policies": [
' +
  "      {
" +
  '        "name": "__internal",
' +
  '        "materializer": 1
' +
  "      },
" +
  "      {
" +
  '        "name": "deny",
' +
  '        "materializer": 3
' +
  "      },
" +
  "      {
" +
  '        "name": "__public",
' +
  '        "materializer": 6
' +
  "      }
" +
  "    ],
" +
  '    "meta": {
' +
  '      "prefix": null,
' +
  '      "secrets": [],
' +
  '      "queries": {
' +
  '        "dynamic": true,
' +
  '        "endpoints": []
' +
  "      },
" +
  '      "cors": {
' +
  '        "allow_origin": [],
' +
  '        "allow_headers": [],
' +
  '        "expose_headers": [],
' +
  '        "allow_methods": [],
' +
  '        "allow_credentials": false,
' +
  '        "max_age_sec": null
' +
  "      },
" +
  '      "auths": [],
' +
  '      "rate": null,
' +
  '      "version": "0.0.2"
' +
  "    }
" +
  "  }
" +
  "]"
`;

snapshot[`typegraphs creation 3`] = `
"[
" +
  "  {
" +
  '    "\$id": "https://metatype.dev/specs/0.0.2.json",
' +
  '    "types": [
' +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "test-complex-types",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "test": 1
' +
  "        },
" +
  '        "required": [
' +
  '          "test"
' +
  "        ]
" +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_20",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          0
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 2,
' +
  '        "output": 20,
' +
  '        "materializer": 0,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_18",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "a_string": 3,
' +
  '          "a_float": 4,
' +
  '          "an_enum": 5,
' +
  '          "an_integer_enum": 6,
' +
  '          "a_float_enum": 7,
' +
  '          "a_struct": 8,
' +
  '          "nested": 10,
' +
  '          "nested_with_ref": 15,
' +
  '          "an_email": 19
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "string",
' +
  '        "title": "string_5",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "number",
' +
  '        "title": "number_6",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "minimum": 1.0,
' +
  '        "multipleOf": 2.0
' +
  "      },
" +
  "      {
" +
  '        "type": "string",
' +
  '        "title": "string_7",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "enum": [
' +
  '          "\\\\"one\\\\"",
' +
  '          "\\\\"two\\\\""
' +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_8",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "enum": [
' +
  '          "1",
' +
  '          "2"
' +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "number",
' +
  '        "title": "number_9",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "enum": [
' +
  '          "1.5",
' +
  '          "2.5"
' +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_11",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "value": 9
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "number",
' +
  '        "title": "number_10",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "optional",
' +
  '        "title": "optional_16",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "item": 11,
' +
  '        "default_value": null
' +
  "      },
" +
  "      {
" +
  '        "type": "array",
' +
  '        "title": "array_15",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "items": 12
' +
  "      },
" +
  "      {
" +
  '        "type": "either",
' +
  '        "title": "either_14",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "oneOf": [
' +
  "          13,
" +
  "          14
" +
  "        ]
" +
  "      },
" +
  "      {
" +
  '        "type": "string",
' +
  '        "title": "string_12",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_13",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_4",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "one": 16,
' +
  '          "two": 18
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "array",
' +
  '        "title": "array_1",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "items": 17,
' +
  '        "minItems": 3
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_0",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "optional",
' +
  '        "title": "optional_3",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "item": 15,
' +
  '        "default_value": null
' +
  "      },
" +
  "      {
" +
  '        "type": "string",
' +
  '        "title": "string_17",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "format": "email"
' +
  "      },
" +
  "      {
" +
  '        "type": "boolean",
' +
  '        "title": "boolean_19",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      }
" +
  "    ],
" +
  '    "materializers": [
' +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=()=>true;"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "predefined_function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "name": "true"
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "runtimes": [
' +
  "      {
" +
  '        "name": "deno",
' +
  '        "data": {
' +
  '          "worker": "default",
' +
  '          "permissions": {}
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "policies": [
' +
  "      {
" +
  '        "name": "__public",
' +
  '        "materializer": 1
' +
  "      }
" +
  "    ],
" +
  '    "meta": {
' +
  '      "prefix": null,
' +
  '      "secrets": [],
' +
  '      "queries": {
' +
  '        "dynamic": true,
' +
  '        "endpoints": []
' +
  "      },
" +
  '      "cors": {
' +
  '        "allow_origin": [],
' +
  '        "allow_headers": [],
' +
  '        "expose_headers": [],
' +
  '        "allow_methods": [],
' +
  '        "allow_credentials": false,
' +
  '        "max_age_sec": null
' +
  "      },
" +
  '      "auths": [],
' +
  '      "rate": null,
' +
  '      "version": "0.0.2"
' +
  "    }
" +
  "  }
" +
  "]"
`;

snapshot[`typegraphs creation 4`] = `
"[
" +
  "  {
" +
  '    "\$id": "https://metatype.dev/specs/0.0.2.json",
' +
  '    "types": [
' +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "test-types",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "one": 1,
' +
  '          "two": 6,
' +
  '          "three": 11
' +
  "        },
" +
  '        "required": [
' +
  '          "one",
' +
  '          "two",
' +
  '          "three"
' +
  "        ]
" +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_9",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          0
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 2,
' +
  '        "output": 5,
' +
  '        "materializer": 0,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_2",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "a": 3,
' +
  '          "b": 4
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_0",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_1",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "minimum": 12
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_3",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "minimum": 12,
' +
  '        "maximum": 43
' +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_11",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          1
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 7,
' +
  '        "output": 9,
' +
  '        "materializer": 2,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_6",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "id": 8,
' +
  '          "post": 9
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_4",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_8",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "id": 10,
' +
  '          "author": 7
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_7",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_13",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          2
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 2,
' +
  '        "output": 2,
' +
  '        "materializer": 4,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      }
" +
  "    ],
" +
  '    "materializers": [
' +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=()=>12;"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=(_,{context})=>context.provider===\\\\"internal\\\\";"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=user=>({id:12,user});"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=()=>false;"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "import_function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "mod": 5,
' +
  '          "name": "three",
' +
  '          "secrets": []
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "module",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "code": "file:scripts/three.ts;base64:H4sIAAAAAAAA/+1X74rjNhDP5zzF4E82OE7i5K7g9o7CbT8ctOxyt4XCsgTFURJTWzKy3CQEv0nfpi/WGcl2nOzSK7Sb+4OHXaxI808zo9FPsczylO8DXQxejCZIr+dz80W6/Ibh5LvBdDJ/PZ2Ek3BG89NpOMXv4ApUFpopgMF/pcvNfSU0HsM7mR9Ustlq+IVrpg85h9u//vQhTWIuCr6CUqy4Ar3l8FPKCp3E8LNdgjCYBENU8fHu5rdRPTl6v+JCJ+uEq6gRGCHjkBjvb29uIyhRNMlyqTRkLB/WwyPcSbR58EHjH7qxUSzfQgVrJTNwfmynxmhAjgsVjzO5wsp1vj+puMGlDyXaz/g/SirLU5gZq2MYS1FoKGTG7ykIb0AHhVZlrN3jEEAKHuEMU4odXB0kQvMNV67no9UsERHMoKKxYBkyOvc76UDl+Sipd5IkZa4TKViKwrmS+4PrfKxNOR7ydYXbBdTQOhbbo/qcb2yBPxKxiew0jlxjmS3WqWSaps3ArV2d+pCVqU5Q3+06grB2lIkFF2VG7PRduA8O7trxwcEtOI8NT731lrcJxRFohitG+4zgAa2Ej41q60kr07hzIRG8Qpng1UnKbjLqbBf+YGlpUoGiS8pAzSx4ofmqmyOeYNEq96ETlI673qPnnZLSUbHYodxCcYxMUwxNdDKWpCY8NHAvsvbulKA6cW3huY5G1aM6hSOaLzCu7saDN2+BUmhzTNWIyRV8161kF3U1HHm5RAZ7UgL8gV9axvVNwPe5LLipCKw6NBgZhcG6FLFrJqFbRX49pYOllClnwgaB6Fh/iX9Fe3ONo5gCLId2ja/XnJJzBM2w9hxB1YLHjhUYrEPDV9mBF1BYreMuOm5sUZTof9DT56EiVkmui7HeKs5fCAV84v7Hm392ef+Hs/m0v/+vQNe8/6nxqjWLOdxTtb0XealNp1lGYHs5tTl2+lENh9TS8GKnDkaNGkydUi87AvNhCVXUUUYd5VhRP8JeqfkeW9MHHku1+sH2fx+38ruQO/GWmpIXGeOsa7zjSWVWFdelEq018mnwLVGR0HXwovD/k/gfj/sT/D8J5/35vwJd9fx/UTifGRDdgsET/p+eoWtz8M9RroXQBJq78Hx5pq/lQqTN9hHMZ11efACpSwyfrLpWDDpCNGegb/1cuMOfzgXm/BU1nb0SSOZfqGal3kplnmLqXKOx8jx8/f9ha7NsrgaE4SeeZuZ5cGseYydsW+BTY+m3qPUMs07DGrFWZwi00V9DXvNGOyk0YTGxfKqV1oxmTDJFlnJsElp5z1oyWnM7dvDHgR5U1rc1Swv7+jM+0EVWe2ELvQHtuL8nozZhRgx14iEpU5q4xHROD8F76qmnnnq6oL8BHyECwwAYAAA="
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "predefined_function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "name": "true"
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "runtimes": [
' +
  "      {
" +
  '        "name": "deno",
' +
  '        "data": {
' +
  '          "worker": "default",
' +
  '          "permissions": {}
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "policies": [
' +
  "      {
" +
  '        "name": "__internal",
' +
  '        "materializer": 1
' +
  "      },
" +
  "      {
" +
  '        "name": "deny",
' +
  '        "materializer": 3
' +
  "      },
" +
  "      {
" +
  '        "name": "__public",
' +
  '        "materializer": 6
' +
  "      }
" +
  "    ],
" +
  '    "meta": {
' +
  '      "prefix": null,
' +
  '      "secrets": [],
' +
  '      "queries": {
' +
  '        "dynamic": true,
' +
  '        "endpoints": []
' +
  "      },
" +
  '      "cors": {
' +
  '        "allow_origin": [],
' +
  '        "allow_headers": [],
' +
  '        "expose_headers": [],
' +
  '        "allow_methods": [],
' +
  '        "allow_credentials": false,
' +
  '        "max_age_sec": null
' +
  "      },
" +
  '      "auths": [],
' +
  '      "rate": null,
' +
  '      "version": "0.0.2"
' +
  "    }
" +
  "  }
" +
  "]"
`;
